View Issue Details

IDProjectCategoryView StatusLast Update
0026177Open CASCADEOCCT:Codingpublic2015-05-14 16:39
Reporterkgv Assigned Tobugmaster  
PrioritynormalSeveritytrivial 
Status closedResolutionfixed 
PlatformMacOSOS 
Product Version6.3.1 
Target Version6.9.0Fixed in Version6.9.0 
Summary0026177: Coding rules - eliminate -Wdeprecated-register CLang warnings
DescriptionThe following warnings should be eliminated:
occt/src/AdvApp2Var/AdvApp2Var_MathBase.cxx:10161:3: warning: 'register' storage class specifier is deprecated [-Wdeprecated-register]
  register integer ii ;
  ^~~~~~~~~
occt/src/AdvApp2Var/AdvApp2Var_MathBase.cxx:10219:3: warning: 'register' storage class specifier is deprecated [-Wdeprecated-register]
  register integer ii ;
occt/src/AdvApp2Var/AdvApp2Var_SysBase.cxx:2426:3: warning: 'register' storage class specifier is deprecated [-Wdeprecated-register]
  register char *jmin=static_cast<char*> (tin);
  ^~~~~~~~~
occt/src/AdvApp2Var/AdvApp2Var_SysBase.cxx:2427:3: warning: 'register' storage class specifier is deprecated [-Wdeprecated-register]
  register char *jmout=static_cast<char*> (tout);
  ^~~~~~~~~
occt/src/AdvApp2Var/AdvApp2Var_SysBase.cxx:2432:7: warning: 'register' storage class specifier is deprecated [-Wdeprecated-register]
      register integer n = *size;
      ^~~~~~~~~
occt/src/AdvApp2Var/AdvApp2Var_SysBase.cxx:2437:7: warning: 'register' storage class specifier is deprecated [-Wdeprecated-register]
      register integer n = *size;
      ^~~~~~~~~
occt/src/GeomLib/GeomLib.cxx:1011:3: warning: 'register' storage class specifier is deprecated [-Wdeprecated-register]
  register Standard_Integer ii ;
  ^~~~~~~~~
Steps To ReproduceN/A
TagsNo tags attached.
Test case numberNot needed

Activities

git

2015-04-30 17:19

administrator   ~0040509

Branch CR26177 has been created by kgv.

SHA-1: 94349fcb3190087fdee42af96e2722d39e14c061


Detailed log of new commits:

Author: kgv
Date: Thu Apr 30 17:19:19 2015 +0300

    0026177: Coding rules - eliminate -Wdeprecated-register CLang warnings

kgv

2015-04-30 17:20

developer   ~0040510

Please test the patch.

mkv

2015-05-05 18:36

tester   ~0040579

Dear BugMaster,
Branch CR26177 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode.
SHA-1: 94349fcb3190087fdee42af96e2722d39e14c061

Number of compiler warnings:

occt component :
Linux: 18 (18 on master)
Windows: 0 (0 on master)

products component :
Linux: 4 (4 on master)
Windows: 0 (0 on master)

Compilation warnings on MacOS platform described on "Description" are eliminated.

Regressions/Differences:
No regressions/differences

Testing cases:
Not needed

Testing on Linux:
occt component :
Total MEMORY difference: 94780821 / 94638557 [+0.15%]
Total CPU difference: 56413.18999999951 / 51017.29999999946 [+10.58%]
products component :
Total MEMORY difference: 23773409 / 23762982 [+0.04%]
Total CPU difference: 18780.739999999998 / 17125.389999999956 [+9.67%]

Testing on Windows:
occt component :
Total MEMORY difference: 57254253 / 57268183 [-0.02%]
Total CPU difference: 15696.46181769896 / 15811.13815279897 [-0.73%]
products component :
Total MEMORY difference: 15601314 / 15605919 [-0.03%]
Total CPU difference: 6213.285828499962 / 6275.40542669997 [-0.99%]

There are no differences in images found by testdiff.

git

2015-05-14 16:39

administrator   ~0041132

Branch CR26177 has been deleted by inv.

SHA-1: 94349fcb3190087fdee42af96e2722d39e14c061

Related Changesets

occt: master a7f510bf

2015-04-30 14:19:19

kgv


Committer: bugmaster Details Diff
0026177: Coding rules - eliminate -Wdeprecated-register CLang warnings Affected Issues
0026177
mod - src/AdvApp2Var/AdvApp2Var_MathBase.cxx Diff File
mod - src/AdvApp2Var/AdvApp2Var_SysBase.cxx Diff File
mod - src/GeomLib/GeomLib.cxx Diff File

Issue History

Date Modified Username Field Change
2015-04-30 17:04 kgv New Issue
2015-04-30 17:04 kgv Assigned To => kgv
2015-04-30 17:05 kgv Product Version => 6.3.1
2015-04-30 17:05 kgv Target Version 6.9.0 => 7.1.0
2015-04-30 17:19 git Note Added: 0040509
2015-04-30 17:20 kgv Note Added: 0040510
2015-04-30 17:20 kgv Assigned To kgv => bugmaster
2015-04-30 17:20 kgv Severity integration request => trivial
2015-04-30 17:20 kgv Status new => resolved
2015-04-30 17:20 kgv Description Updated
2015-04-30 17:20 kgv Status resolved => reviewed
2015-04-30 17:27 mkv Assigned To bugmaster => mkv
2015-05-05 18:36 mkv Note Added: 0040579
2015-05-05 18:36 mkv Assigned To mkv => bugmaster
2015-05-05 18:36 mkv Status reviewed => tested
2015-05-05 18:36 mkv Test case number => Not needed
2015-05-05 18:39 kgv Target Version 7.1.0 => 6.9.0
2015-05-07 11:18 bugmaster Changeset attached => occt master a7f510bf
2015-05-07 11:18 bugmaster Status tested => verified
2015-05-07 11:18 bugmaster Resolution open => fixed
2015-05-14 15:28 aiv Status verified => closed
2015-05-14 15:30 aiv Fixed in Version => 6.9.0
2015-05-14 16:39 git Note Added: 0041132