0026177: Coding rules - eliminate -Wdeprecated-register CLang warnings